kube/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  ports:
    - nodePort: 32001
      port: 80
      targetPort: 3000
  selector:
    app: helloworld
    version: v2
  type: NodePort
