kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
    - protocol: TCP
      # port accessible outside of cluster
      nodePort: 32000
      # port accessible inside of cluster
      port: 80
      # port to forward to inside of pod
      targetPort: 3000
  selector:
    app: helloworld-app
  type: NodePort
