kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: helloworld-service
              servicePort: 80
